--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {"node": "14.x"
+  "engines": {
+    "node": "14.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,7 +20,7 @@
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^2.0.5",
     "jwt-decode": "^3.1.2",
-    "mongodb": "^4.1.3"
+    "mongodb": "^4.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
